# ML_streamlit

./: Hello.py  README.md  Visual_Classify.py  classification.py  classifiers.py  datasets.py  diabetes.py  input_widgets.py  iris.py  iris_knn.py  iris_mlp.py  model.pth  pyproject.toml  pytorch.ipynb  regressions.py  svm.py  testCopilot.py  visualization.py  wine.py
pages/: upload_csv.py  visualize.py
