[tool.poetry]
name = "web1-master"
version = "0.1.0"
description = ""
authors = ["phrommate <phrommate.kri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
seaborn = "^0.13.2"
torch = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
